# OpenGL-sphere

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: camera.hpp  shader.hpp  sphere.hpp
resources/shaders/: 3d.vert  light_source.frag  lighting.frag
src/: camera.cpp  main.cpp  shader.cpp  sphere.cpp
